# swagger-output.json
@@ -1,7 +1,7 @@
 {
   "openapi": "3.0.0",
   "info": {
-    "title": "week 3  API",
+    "title": "week 4 Authentication  API",
     "description": " API for user contact Information and Temple Information",
     "version": "1.0.0",
     "contact": {
@@ -10,7 +10,7 @@
   },
   "servers": [
     {
-      "url": "http://localhost:5000"
+      "url": "http://localhost:9001"
     }
   ],
   "paths": {
@@ -628,6 +628,23 @@
           },
           "500": {
             "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/auth/google/logout": {
+      "get": {
+        "summary": "Log out the current user",
+        "description": "Logs the user out of their session and redirects to the home page.",
+        "tags": [
+          "Authentication"
+        ],
+        "responses": {
+          "302": {
+            "description": "Successfully logged out. Redirecting to the home page."
+          },
+          "400": {
+            "description": "Error occurred during logout."
           }
         }
       }
